--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "name": "trossbe-entregas",
-    "type": "module",
     "exports": {
         "./*": {
             "default": "./src/js/*.js"
@@ -12,6 +11,7 @@
     },
     "devDependencies": {
         "@types/express": "^5.0.6",
+        "dotenv": "^17.2.3",
         "vercel": "^50.1.0"
     }
 }
